--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -170,7 +170,7 @@ head(imputed_date_summary)
 summary(imputed_date_summary$total_steps)
 ```
 
-Here we have plotted both histograms against each other and a vertical line representing the median of our total steps in order to better view the differences. We can see from the plot that the frequency of dates with a total steps at the median increases 
+Here we have plotted both histograms against each other (red=Imputed, blue=Actual) and a vertical line representing the median of our total steps in order to better view the differences. We can see from the plot that the frequency of dates with a total steps at the median increases 
 
 ```{r}
 ggplot(imputed_date_summary, aes(x=total_steps)) + 
@@ -198,5 +198,7 @@ Then plotting the two against each other we see that during the weekday there is
 
 ```{r}
 qplot(time, y=avg_steps, geom='line', facets=weekday~., data=weekday_avg) + 
-    scale_x_chron(format="%H:%M")
+    scale_x_chron(format="%H:%M") +
+    labs(x='Time of day', y='Steps') + 
+    ggtitle('Weekday comparison of average steps per 5 minute interval')
 ```
